style - fix icon flicker

--- a/components/landing/firstPage/style.css
+++ b/components/landing/firstPage/style.css
@@ -9,8 +9,7 @@
   
 
      & img{
-      width: 500px;
-      height: 500px;
+   
       padding: 50px;
       object-fit: contain;
      
